# RagScore

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  ADVANCED_METRICS_SUMMARY.md  ASSESSMENT_SUMMARY.md  CHANGELOG.md  COMPLETE_WORKFLOW.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  FRONTEND_ASSESSMENT_SUMMARY.md  GIT_WORKFLOW.md  LICENSE  QUICK_ASSESSMENT.md  QUICK_START.md  README.md  README_CN.md  README_DE.md  README_JP.md  SETUP_INSTRUCTIONS.md  TROUBLESHOOTING.md  deploy_nltk_data.sh  deploy_to_server.sh  fix_installation.sh  llm.txt  pyproject.toml  ragscore_aas_p3-2.py  requirements.frozen.txt  requirements.txt  server.json  setup.py  setup.sh  start_web.sh  test_pipeline.py
.github/workflows/: ci.yml  publish.yml
data/docs/: .gitkeep
docs/: ADVANCED_METRICS_GUIDE.md  ASSESSMENT_GUIDE.md  LANDING_PAGE_BRIEF.md  METRICS_COMPARISON.md
examples/: advanced_assessment_example.py  audience_purpose_demo.ipynb  basic_usage.py  chinese_demo.ipynb  complete_demo.ipynb  demo.ipynb  detailed_evaluation_demo.ipynb  german_demo.ipynb  japanese_demo.ipynb  ollama_local_demo.ipynb  run_assessment_example.py
output/: .gitkeep
src/ragscore/: __init__.py  advanced_evaluator.py  assessment.py  assessment_cli.py  cli.py  config.py  data_processing.py  embedding.py  evaluation.py  exceptions.py  llm.py  mcp_server.py  pipeline.py  quick_test.py  ui.py  (+1 more)
tests/: __init__.py  conftest.py  test_data_processing.py  test_detailed_colab.py  test_exceptions.py  test_mcp_server.py  test_quick_test.py  test_ui.py  test_vector_store.py
(+11 files in other folders)
