[tool.poetry]
name = "ragscore"
version = "0.1.0"
description = "A pipeline for generating QA datasets to evaluate RAG systems."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true


[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pypdf2 = "^3.0.1"
nltk = "^3.8.1"
tqdm = "^4.66.1"
sentence-transformers = "^2.2.2"
faiss-cpu = "^1.7.4"
dashscope = "^1.14.1"
langchain-community = "^0.0.31"
numpy = "^1.26.2"
typer = {extras = ["all"], version = "^0.9.0"}
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
ruff = "^0.1.6"
black = "^23.11.0"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ragscore = "ragscore.cli:app"
